RESOLVED FIXED282732
Passkey registration broken on Ventura
https://bugs.webkit.org/show_bug.cgi?id=282732
Summary Passkey registration broken on Ventura
Jason Lee
Reported 2024-11-06 18:49:28 PST
Passkey registration is broken on Ventura
Attachments
Jason Lee
Comment 1 2024-11-06 18:49:29 PST
Jason Lee
Comment 2 2024-11-06 18:51:57 PST
EWS
Comment 3 2024-11-08 09:45:41 PST
Committed 286345@main (b09d78e4a2ec): <https://commits.webkit.org/286345@main> Reviewed commits have been landed. Closing PR #36304 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.