Passkey registration broken on Ventura https://bugs.webkit.org/show_bug.cgi?id=282732 rdar://139368939

Reviewed by Brent Fulgham.

ASCPlatformPublicKeyCredentialRegistration.transports was changed from an array
of NSNumbers to NSStrings. This change was not reflected in the WebKit legacy
passkey code path.

This patch updates that code to properly convert the strings to enum values.

* Source/WebKit/Platform/spi/Cocoa/AuthenticationServicesCoreSPI.h:
* Source/WebKit/UIProcess/WebAuthentication/Cocoa/WebAuthenticatorCoordinatorProxy.mm:
(WebKit::toAuthenticatorTransports):

Canonical link: https://commits.webkit.org/286345@main